--- a/public/css/style.css
+++ b/public/css/style.css
@@ -63,6 +63,9 @@ body{
     padding: 50px;
     text-align: center;
 }
+.container4 br{
+    display: none;
+}
 .container5{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
